<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.malivasileva.libraryapp.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/address"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/phone"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/et_check"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/check"/>

        <Button
            android:id="@+id/registrate"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:text="@string/registrate"/>

        <TextView
            android:id="@+id/pass_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_error"
            android:textColor="@color/red"
            android:visibility="invisible"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>